syntax = "proto3";
package packet;

option go_package = "packet";

enum Type {
    // Reserved.
    UNKNOWN = 0;
    // Client request to connect to server.
    CONNECT = 1;
    // Connect Acknowledgment.
    CONNACK = 2;
    // Client sends a heartbeat to the server.
    PING = 3;
    // Server responds to the client heartbeat
    PONG = 4;

    // Route route message.
    ROUTE = 99;
}

// AuthMode Type = Connect
enum AuthMode {
    // PULSE default encryption method.
    // Base64(Hmac+Sha1).
    HMACSHA1 = 0;
    NOTSAFE = 99;
}

enum RouteMode {
    NOT = 0;
    NORMAL = 1;
    DYNAMIC = 2;
}

message Route {
    string group = 1;
    int32 id = 2;
}

// Packet packet message structure.
message Packet {
    /** Basic header field. Begin**/
    // Packet type.
    Type type = 1;
    // Unique identification of device terminal.
    string udid = 2;
    /** Basic header field. End**/

    /** Auth. Begin**/
    AuthMode auth_mode = 50;
    string secret = 51;
    /** Auth. End**/

    /** Other. Begin**/
    string local_addr = 70;
    /** Other. ned**/

    /** Route msg. Begin**/
    RouteMode route_mode = 90;
    Route route = 91;
    Msg msg = 99;
    /** Route msg. End**/
}

message Msg {
    string request_id = 1;
    // The content of body can be customized, such as 0=protobuf, 1=json, etc.
    int32 type = 2;
    bytes body = 99;
}
